Update config.toml 9297aff4cdcd9e09019b4c61d63ed65acb9873ae

--- a/movies/index.html
+++ b/movies/index.html
@@ -12,10 +12,10 @@
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="https://blog.elizen.me/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="https://blog.elizen.me/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="https://blog.elizen.me/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="https://blog.elizen.me/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="https://elizen.github.io/elizen-blog/css/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="https://elizen.github.io/elizen-blog/css/poole.css">
+  <link type="text/css" rel="stylesheet" href="https://elizen.github.io/elizen-blog/css/syntax.css">
+  <link type="text/css" rel="stylesheet" href="https://elizen.github.io/elizen-blog/css/hyde.css">
     <link rel="stylesheet" href="https://fonts.loli.net/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -31,8 +31,8 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://blog.elizen.me/"></a>
-      <a class="site-title" href="https://blog.elizen.me/">
+      <a href="https://elizen.github.io/elizen-blog/"></a>
+      <a class="site-title" href="https://elizen.github.io/elizen-blog/">
         <div class="main-title"><h1>Elizen's</h1></div>
         <div class="main-title"><h1>Blog</h1></div>
       </a>
@@ -43,7 +43,7 @@
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="https://blog.elizen.me/">Home</a> </li>
+        <li><a href="https://elizen.github.io/elizen-blog/">Home</a> </li>
         <li><a href="https://blog.elizen.me/post/"> Archives </a></li><li><a href="https://blog.elizen.me/tags/"> Tags </a></li><li><a href="https://elizen.me"> Weebo </a></li>
       </ul>
     </nav>
