Update be-afraid-of-senility.md 284dee9218775a8a63b0230705f5d36cf362c219

--- a/be-afraid-of-senility/index.html
+++ b/be-afraid-of-senility/index.html
@@ -66,7 +66,7 @@
 <p>以前从没有过的恐惧，忙起来没有用，忙乱起来还好一点。专注做一件事，就总会有小鬼从脑子里冒出来，像是莫言讲过的故事，只能两件事、三件事一起做，感觉精力全部被占用了，好像就不再胡思乱想了。</p>
 <p>刷微博，会看见老去，朋友圈也会，豆瓣更不敢看，丧的一逼。不喜欢豆瓣，终日充斥着我丧我有理的的态度，多半是用来装逼，用假“抑郁”来对抗世界，告诉世界我不一样，好像活得很独特，也很独立，看看豆瓣有多少人在用就好了，大家都很独特，也很独立。但是豆瓣有意思，明明是大众事件，豆瓣用户总能做出来一副居高临下指点江山的感觉，不是一个人这样，也不是一群，是整个豆瓣。不过总能发现几个，大隐隐于豆瓣的人，不是和全世界对抗，也不告诉全世界我很特别，甚至，都不想告诉豆瓣，他们存在着。找到一个，如获至宝，一条条广播看，能看一下午。有意思，解闷，不做作，不装逼，就写写生活，写写自己，写的天马行空。</p>
 <p>很郁闷，比任何时候都害怕衰老。</p>
-<p>微博不行，关注的越多，关注的越少。不是绕口令，琢磨琢磨就懂了。原来是微博控，当做资源宝库用，后来放弃了，资源多了，是累赘，还容易头疼，而且，微博也找不到什么好资源，都是跟风的多，奉献的少，到现在，基本上只关注三个会发或者会转资源的人，足够了。上微博，最多的人都在看热门话题，用 Moke，找不到热门，也从来不看，只要最近冒出什么八卦，不用微博，哪哪都能看见，肯定落不下，紧着躲，也躲不开，是真不习惯看这个，谁结婚了，谁出轨了，哪个明星出事了，哪个领导下台了，很无聊，也理解不了每天守着微博等着别人八卦的人，究竟怎么想的，是因为就算自己出轨也闹不出新闻，上不了热搜么？</p>
+<p>微博不行，关注的越多，关注的越少。不是绕口令，琢磨琢磨就懂了。原来是微博控，当做资源宝库用，后来放弃了，资源多了，是累赘，还容易头疼，而且，微博也找不到什么好资源，都是跟风多，奉献少，到现在，基本上只关注三个会发或者会转资源的人，足够了。上微博，最多的人都在看热门话题，用 Moke，找不到热门，也从来不看，只要最近冒出什么八卦，不用微博，哪哪都能看见，肯定落不下，紧着躲，也躲不开，是真不习惯看这个，谁结婚了，谁出轨了，哪个明星出事了，哪个领导下台了，很无聊，也理解不了每天守着微博等着别人八卦的人，究竟怎么想的，是因为就算自己出轨也闹不出新闻，上不了热搜么？</p>
 <p>微信用的最多，群里聊天多，看别人在群里聊天也多，自己跑出去和别人聊天的时候很少，有时候挺羡慕，有些人发个截图，和朋友侃天侃地，还顺便教育人生，好像一对一，就不会聊天了，没有互动，对着屏幕，也解决不了别人的问题，也解决不了自己的问题。无奈，就刷刷朋友圈，变得和微博差不多了，只不过是删减版的。经常关了朋友圈，不影响什么，但确实会错过一些朋友的生活轨迹，结婚了，旅行了，换了工作，不会广而告之，但是会发朋友圈。其实往前数几十年，人一辈子就那么几个朋友，有事情，有变动，一定写信告之，要不然，就联系不上了，几个也没有了。现在说弱关系，比强关系强，那是没遇见麻烦，遇见了，弱的还是弱，能帮忙的，还是老朋友。这么说有些绝对，但还是觉得微信聊天很难，发语音不如打字礼貌，打字还容易累，最后都变成表情包了。群里聊聊还算好的，你一言我一语，不会太尴尬，也有讨论的意义，进退的余地。不过还是躲不开，祸从口出。</p>
 <p>很可怕，比任何时候都害怕衰老。</p>
 <p>看了今年的《奇葩说》，老婆怀孕，奇葩说的导演妹妹帮忙留了两个现场席位，时间赶不上，身体也熬不住，就没去。连着要了两年，连着给留了两年，明年应该不好意思再去要了，不过年纪大了，脸皮越来越厚，可能也就无所谓了。</p>
