--- a/books/index.html
+++ b/books/index.html
@@ -45,7 +45,7 @@
     <nav>
       <ul class="sidebar-nav">
         <li><a href="https://elizen.github.io/elizen-blog/">Home</a> </li>
-        <li><a href="https://elizen.github.io/elizen-blog/post/"> Archives </a></li><li><a href="https://elizen.github.io/elizen-blog/books/"> Books </a></li><li><a href="https://blog.elizen.me"> Elizen‘s Blog </a></li><li><a href="https://elizen.github.io/elizen-blog/movies/"> Movies </a></li><li><a href="https://elizen.github.io/elizen-blog/tags/"> Tags </a></li>
+        <li><a href="https://elizen.github.io/elizen-blog/posts/"> Archives </a></li><li><a href="https://elizen.github.io/elizen-blog/books/"> Books </a></li><li><a href="https://blog.elizen.me"> Elizen‘s Blog </a></li><li><a href="https://elizen.github.io/elizen-blog/movies/"> Movies </a></li><li><a href="https://elizen.github.io/elizen-blog/tags/"> Tags </a></li>
       </ul>
     </nav>
 
