Update photos pafe 463177e167bba5633974b2eb0ad4bcd61ddf2e63

--- a/photos/index.html
+++ b/photos/index.html
@@ -62,17 +62,17 @@
 <div class="page-photos">
   
   <figure>
-   <img src="https://elizen.me/photos/%e5%98%9f%e5%98%9f-%e8%99%9a%e7%84%a6.jpeg" alt="嘟嘟-虚焦.jpeg" />
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f-%e8%99%9a%e7%84%a6.jpeg" alt="嘟嘟-虚焦.jpeg" />
     <figcaption>嘟嘟-虚焦</figcaption>
   </figure>
   
   <figure>
-   <img src="https://elizen.me/photos/%e5%98%9f%e5%98%9f%e5%92%8c%e5%a6%88%e5%a6%88-%e5%a4%a7%e9%bb%91%e6%a5%bc.jpeg" alt="嘟嘟和妈妈-大黑楼.jpeg" />
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f%e5%92%8c%e5%a6%88%e5%a6%88-%e5%a4%a7%e9%bb%91%e6%a5%bc.jpeg" alt="嘟嘟和妈妈-大黑楼.jpeg" />
     <figcaption>嘟嘟和妈妈-大黑楼</figcaption>
   </figure>
   
   <figure>
-   <img src="https://elizen.me/photos/%e5%98%9f%e5%98%9f%e5%92%8c%e5%a6%88%e5%a6%88-%e8%93%9d%e8%89%b2%e6%b8%af%e6%b9%be.jpeg" alt="嘟嘟和妈妈-蓝色港湾.jpeg" />
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f%e5%92%8c%e5%a6%88%e5%a6%88-%e8%93%9d%e8%89%b2%e6%b8%af%e6%b9%be.jpeg" alt="嘟嘟和妈妈-蓝色港湾.jpeg" />
     <figcaption>嘟嘟和妈妈-蓝色港湾</figcaption>
   </figure>
   
