--- a/photos/index.html
+++ b/photos/index.html
@@ -62,6 +62,11 @@
 <div class="page-photos">
   
   <figure>
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/FA3C3BE2-6082-401A-B312-6D2AB44DD1EF.jpeg" alt="FA3C3BE2-6082-401A-B312-6D2AB44DD1EF.jpeg" />
+    <figcaption>FA3C3BE2-6082-401A-B312-6D2AB44DD1EF</figcaption>
+  </figure>
+  
+  <figure>
     <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f-%e8%99%9a%e7%84%a6.jpeg" alt="嘟嘟-虚焦.jpeg" />
     <figcaption>嘟嘟-虚焦</figcaption>
   </figure>
