update music shortcuts 6c1487772638d5539d39c141fdeb73768b81cfc4

--- a/huo-zha-le/index.html
+++ b/huo-zha-le/index.html
@@ -9,6 +9,12 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>  
+
   <title>来一曲东北灭火朋克 &middot; Elizen&#39;s Blog</title>
   <meta name="description" content="" />
 
@@ -68,6 +74,7 @@
 <p>我一直喜欢的东北灭火朋克历时十五年，终于发了新专辑了。</p>
 <p>点击收听！</p>
 <p>[火乍了-何教授]（https://music.163.com/#/song?id=1438432532）</p>
+<meting-js server="https://music.163.com/#/song?id=1438432532" type="" id="" theme="#a9a9b3"></meting-js>
 
   </div>
 </div>
