--- a/books/index.html
+++ b/books/index.html
@@ -9,6 +9,12 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>  
+
   <title>我的阅读 &middot; Elizen&#39;s Blog</title>
   <meta name="description" content="" />
 
