--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>  
+
   <title>Elizen&#39;s Blog</title>
   <meta name="description" content="There is only one thing in the world worse than being talked about, and that is not being talked about." />
 
