update photo 6df6d5ffccb160a4eb0e1d9d1ff2ed8ef4bd1e09

--- a/photos/index.html
+++ b/photos/index.html
@@ -68,8 +68,8 @@
 <div class="page-photos">
   
   <figure>
-    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/FA3C3BE2-6082-401A-B312-6D2AB44DD1EF.jpeg" alt="FA3C3BE2-6082-401A-B312-6D2AB44DD1EF.jpeg" />
-    <figcaption>FA3C3BE2-6082-401A-B312-6D2AB44DD1EF</figcaption>
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%88%98%e5%a0%83%e7%8e%b0%e5%9c%ba.jpeg" alt="刘堃现场.jpeg" />
+    <figcaption>刘堃现场</figcaption>
   </figure>
   
   <figure>
@@ -85,6 +85,11 @@
   <figure>
     <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f%e5%92%8c%e5%a6%88%e5%a6%88-%e8%93%9d%e8%89%b2%e6%b8%af%e6%b9%be.jpeg" alt="嘟嘟和妈妈-蓝色港湾.jpeg" />
     <figcaption>嘟嘟和妈妈-蓝色港湾</figcaption>
+  </figure>
+  
+  <figure>
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e7%bb%99%e5%8d%81%e4%b8%80%e6%8b%8d%e7%9a%84%e3%80%8cCall%20Me%20by%20Your%20Name%e3%80%8d.jpeg" alt="给十一拍的「Call Me by Your Name」.jpeg" />
+    <figcaption>给十一拍的「Call Me by Your Name」</figcaption>
   </figure>
   
 </div>
