update photos page feca4125e55620268ed00b96bf18cbaaa0c7c064

--- a/photos/index.html
+++ b/photos/index.html
@@ -88,6 +88,11 @@
   </figure>
   
   <figure>
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f%e5%9c%a8%e8%93%9d%e6%b8%af%e7%9a%84%e8%af%95%e8%a1%a3%e9%97%b4%e8%80%8d%e8%b5%b7%e6%9d%a5%e4%ba%86.jpeg" alt="嘟嘟在蓝港的试衣间耍起来了.jpeg" />
+    <figcaption>嘟嘟在蓝港的试衣间耍起来了</figcaption>
+  </figure>
+  
+  <figure>
     <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e7%bb%99%e5%8d%81%e4%b8%80%e6%8b%8d%e7%9a%84%e3%80%8cCall%20Me%20by%20Your%20Name%e3%80%8d.jpeg" alt="给十一拍的「Call Me by Your Name」.jpeg" />
     <figcaption>给十一拍的「Call Me by Your Name」</figcaption>
   </figure>
