update bb page 61c460efbe4b749b8a5c87f9d6dea72890a1074a

--- a/bb/index.html
+++ b/bb/index.html
@@ -109,6 +109,7 @@
     AV.init({
         appId:"kKneKqFppxPaLCfHbglIw7nv-gzGzoHsz", 
         appKey:"oS9d2e5q6kDN42VXS9yLIQk1", 
+        serverURLs: 'https://content.elizen.me'
     });
 
     var query = new AV.Query('content');
