--- a/update-blog-single-photos/index.html
+++ b/update-blog-single-photos/index.html
@@ -76,9 +76,7 @@
 <p>接下来准备研究一下瀑布流和灯箱效果了。</p>
 
     
-    
-    <photos><img class="avatar" loading='lazy' src="https://cdn.jsdelivr.net/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-01.jpeg" /><img class="avatar" loading='lazy' src="https://cdn.jsdelivr.net/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-02.jpeg" /><img class="avatar" loading='lazy' src="https://cdn.jsdelivr.net/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-03.jpeg" /><img class="avatar" loading='lazy' src="https://cdn.jsdelivr.net/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-04.jpeg" /><img class="avatar" loading='lazy' src="https://cdn.jsdelivr.net/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-05.jpeg" /><img class="avatar" loading='lazy' src="https://cdn.jsdelivr.net/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-06.jpeg" /><img class="avatar" loading='lazy' src="https://cdn.jsdelivr.net/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-07.jpeg" /><img class="avatar" loading='lazy' src="https://cdn.jsdelivr.net/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-08.jpeg" /></photos>
-
+    <img loading='lazy' src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-01.jpeg" /><img loading='lazy' src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-02.jpeg" /><img loading='lazy' src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-03.jpeg" /><img loading='lazy' src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-04.jpeg" /><img loading='lazy' src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-05.jpeg" /><img loading='lazy' src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-06.jpeg" /><img loading='lazy' src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-07.jpeg" /><img loading='lazy' src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/images/0412lsgw/syj-08.jpeg" />
   </div>
 </div>
 
