--- a/2020-05-28-talk-32/index.html
+++ b/2020-05-28-talk-32/index.html
@@ -85,6 +85,7 @@
 <p>一些文章讲如何快速的阅读，步骤罗列了一二三，你看了觉得很有收获，打上干货的标签，但背后的因果并没有弄清楚，是所有的书都适合这样做么，稍稍一想，就困惑了。赤羽雄二讲得更多的是他的逻辑，为什么要读书，为什么要挤时间读书，既然自己只能挤时间读书，那么怎么才能高效读书。这是全书的逻辑。</p>
 <p>对赤羽雄二来说，他在麦肯锡工作，每天日常的工作就要到晚上十一二点钟，有时候陪客户吃饭会到一两点，而第二天还有一些报告要做，除此之外，他经常要迅速熟知一些领域，并且深入进去，了解其中的产业链条。这些外部条件，自然让他只能挤时间读书，而不读书，又很难完成本职工作，自然就有了这套高效阅读的法则。不先理解背后的因果，只看干货，很难把武器用在对的地方。</p>
 <p>如果是一个做历史研究的人，恐怕就不适合这样的方法了。当然，也可以有一篇《如何快速阅读历史文献》的干货文章，或者一本《我是怎样读历史文献》的书。相比之下，我更愿意看看后者，了解其中门道。</p>
+<p>赤羽雄二说，在 30 岁之前要读 300 本书，我及格了。</p>
 <h3 id="03">03.</h3>
 <p>疫情之后的世界，是我现在经常关注的话题。疫情短期不会结束，目前医学界也没有很好的办法，如果夏天的高温对其无用，再有些随机突变，可能「疫情之后」这个说法本身就变成了一个伪命题。</p>
 <p>可以预见的是经济的衰退，这也是大多数人最关心的问题，经济一旦衰退，自己是不是要勒紧裤腰带过日子呢？有些人会回去重新看历史上的经济危机，或者因为灾祸导致的经济衰退，人们都是如何渡过的。</p>
