--- a/hugo-single-link/index.html
+++ b/hugo-single-link/index.html
@@ -100,7 +100,8 @@
 </div>
 
 <p>弄这个东西其实和文章里插入音乐一样，各有优缺点，优点就是方便，缺点自然是迁移成本好。好在现在用了一整套自动化流程，除了写其余都不需要关心，目测会使用 <code>HUGO</code> 相当一段时间了，也就先不考虑迁移的问题了。而且这些平台，除了 Bitcorn 我还真没发现更好更便捷的，无奈它不太给力啊。</p>
-<p>折腾到现在，感觉没有什么需求了。爽歪歪。</p>
+<p>折腾到现在，感觉没有什么需求了。</p>
+<p>爽歪歪。</p>
 
     
   </div>
