--- a/2020-05-03-the-letter-of-2020/index.html
+++ b/2020-05-03-the-letter-of-2020/index.html
@@ -51,7 +51,7 @@
     <nav>
       <ul class="sidebar-nav">
         <li><a href="https://elizen.me/">Home</a> </li>
-        <li><a href="https://elizen.me/posts/"> Archives </a></li><li><a href="https://elizen.me/books/"> Books </a></li><li><a href="https://blog.elizen.me"> Deep Think </a></li><li><a href="https://elizen.me/movies/"> Movies </a></li><li><a href="https://elizen.me/photos/"> Photos </a></li><li><a href="https://elizen.me/tags/"> Tags </a></li>
+        <li><a href="https://elizen.me/posts/"> Archives </a></li><li><a href="https://elizen.me/books/"> Books </a></li><li><a href="https://elizen.me/movies/"> Movies </a></li><li><a href="https://elizen.me/photos/"> Photos </a></li><li><a href="https://elizen.me/tags/"> Tags </a></li>
       </ul>
     </nav>
 
