--- a/2020-09-22-nonsense-34/index.html
+++ b/2020-09-22-nonsense-34/index.html
@@ -97,8 +97,8 @@
 <p>在读过一些通俗哲学之后，陈嘉映和项飙，是我非常喜欢的作家，他们的共同点是对于我这种门外汉很友好，另一方面，他们的文字比较朴实，大道至简。关心的话题，也是非常实际，所谓接地气，但这股气我明白，不是那么容易接上的。尤其在一些非常理论化的学科中，能把话讲清楚的人很少，讲清楚又简单易懂，则更难得。甚至，不排除一些半吊子学者，为了让自己看起来不那么半吊子，一定要写的形而上，故意让别人看不懂。</p>
 <p>项飙这本书，是一本访谈录，一年时间，三个地点，三次访谈，在聊天中逐渐形成了一些联系，一些主题。所以这本书非常散，也非常好读，而理解到哪里，又给人很大的空间。</p>
 <p>书的核心可以概括为<strong>如何理解乡绅思维</strong>，<strong>边缘与中心的关系</strong>这两个比较大的主题。</p>
-<p>关于边缘，项飙说_“不要怕边缘，或者知识不够，把自己的不够、天真真实地表达出来，就会很可爱，不要装腔作势。”_而从现代性上来看，_“边缘”和“中心”变成一组对立关系，中国人又有那么强的中心情结，觉得边缘的生活不值得过，造成极大的焦虑。权力和资源过度集中。人们常说“红二代”一般不腐败，因为从小家庭条件比较好，钱无所谓，我想是有道理的，你看我们的日常生活或者新闻报道，不少巨贪都是从社会底层上来，包括在学术单位里，那些从底层上来的人往往更加容易变本加厉，就是因为他们对自己“边缘”的定位。他不认这个命。为了从边缘进入中心可以不择手段，进入中心之后觉得原来在边缘学到的那些做人原则也可以统统不要。_</p>
-<p>项飙提了很多问题，一些是他正在困惑的，一些是有他自己的答案的，对于边缘和中心的关系，他最后举了一个例子，_ “我突然想到日本的福冈，它做得比较好，它不用它和东京的关系来定位自己，它会通过它和韩国、中国，特别是山东青岛的关系来定位自己，认为自己是东亚的交汇点。我们广西也定位为东南亚的门户，日常中它跟东南亚的交往很多，这方面的文化意义也应该挖掘出来，让老百姓觉得他们每天干的事情其实很有意思，而不是老觉得自己的孩子不能再干这个，一定要到北京去。”_</p>
+<p>关于边缘，项飙说*“不要怕边缘，或者知识不够，把自己的不够、天真真实地表达出来，就会很可爱，不要装腔作势。”*而从现代性上来看，*“边缘”和“中心”变成一组对立关系，中国人又有那么强的中心情结，觉得边缘的生活不值得过，造成极大的焦虑。权力和资源过度集中。人们常说“红二代”一般不腐败，因为从小家庭条件比较好，钱无所谓，我想是有道理的，你看我们的日常生活或者新闻报道，不少巨贪都是从社会底层上来，包括在学术单位里，那些从底层上来的人往往更加容易变本加厉，就是因为他们对自己“边缘”的定位。他不认这个命。为了从边缘进入中心可以不择手段，进入中心之后觉得原来在边缘学到的那些做人原则也可以统统不要。*</p>
+<p>项飙提了很多问题，一些是他正在困惑的，一些是有他自己的答案的，对于边缘和中心的关系，他最后举了一个例子，<em>“我突然想到日本的福冈，它做得比较好，它不用它和东京的关系来定位自己，它会通过它和韩国、中国，特别是山东青岛的关系来定位自己，认为自己是东亚的交汇点。我们广西也定位为东南亚的门户，日常中它跟东南亚的交往很多，这方面的文化意义也应该挖掘出来，让老百姓觉得他们每天干的事情其实很有意思，而不是老觉得自己的孩子不能再干这个，一定要到北京去。”</em></p>
 <p>在这种关系中，乡绅思维就变得很有趣，什么是乡绅思维呢，就是自己照顾好自己这一亩三分地，一个村子，一个小圈子，总有那么一个人，把身边人的情况摸得很透，又能在政策中寻找到平衡，<em>“他们的立足点是自己的小世界，但能够和大体制进行沟通和迂回，利用大体制，对大体制有解读，有自己的说法。如果从这样的意义上理解，乡绅在今天是完全可能的，要做好乡绅，就是要把自己的小世界弄清楚，对大的体制、权力也理解得很透。”“最重要的是他(乡绅)代表一批人，不断把他们的情况表达出来，乡绅就是一种代表，是分析性、理解性、代表性的，是话语的提炼者、发声者，当然也是原则、规则的制定者。”</em></p>
 <p>找好自己的定位，经营好自己，<em>对自己生活的小世界发生兴趣，有意识地用自己的语言把自己的生活讲出来</em>，<em>平衡自己的历史来源和自己现在的行动，这是真正的英雄。真正的英雄不是改变世界，而是改变自己生活的每一天。</em></p>
 <p>这本书说的过多，但也只是这本书的一小部分。他还讲了很多我感兴趣的话题，比如<strong>有机知识分子</strong>，<strong>机械与精确的区别</strong>，<strong>阅读的功力</strong>等等。</p>
@@ -108,7 +108,7 @@
 <p>所谓的中产（我都不知道自己算不算中产）焦虑就出现了，在这种没有最好只有更好的循环里，每个人都想尽可能达到更高一点的平衡点，这样在做选择的时候，对于下一级，就是降维打击。</p>
 <p>这里就有另一个问题。有些人说，这是人民币玩家的世界，另一些人说，这是阶级固化。这两种情况都存在，前者可能通过努力升级，后者则是拼命通过教育改变。但是很不幸，以我的观察，这种努力和改变，都很难跳出本来的阶级。因为阶级，不是等距的楼梯，迈上一节和另一节不是同等的付出可以实现的，甚至不是一代人可以实现的。</p>
 <h3 id="04">04.</h3>
-<p>黄章晋刚刚发了一篇文章，从他儿子不想让别人知道爸爸是骑电动车送他上学讲到了阶级，文章里他说_社会的残酷，孩子不是通过知识才知道的，而是自己感受到的，这个真实社会，可能孩子看到的远比成年人想象得更残酷。他们什么都懂。_</p>
+<p>黄章晋刚刚发了一篇文章，从他儿子不想让别人知道爸爸是骑电动车送他上学讲到了阶级，文章里他说<em>社会的残酷，孩子不是通过知识才知道的，而是自己感受到的，这个真实社会，可能孩子看到的远比成年人想象得更残酷。他们什么都懂。</em></p>
 <p>前几天那个山村女校的校长，被人说是填鸭式教育，她承认，她就是填鸭式教育，对她们来说，考出去，是首要的，甚至是不择手段的考出去，只有出去了，才能彻底换个阶级，才有后面的机会。否则，怎么办？一辈一辈留在山里，一辈一辈种田种地？我挺理解，也很同意，对她们来说，高考是唯一的机会，她们同样可以选择最后回到大山去做接棒人，但那是她们走出去之后的选择，前提是，社会要先给她们一个选择的机会。</p>
 <p>这些问题是共性的，关联的，是短时间甚至一直都不会有答案的。我们能怎么办？或者再缩小一点，我能怎么办？我怎么和我的孩子讲阶级，讲教育，讲社会，讲社会制度？</p>
 <p>黄章晋在文章最后说，<em>只要孩子相信我，我就对他有信心。</em></p>
