update photos 88b4dee906a907592d5ee31e183e96f5f6607a09

--- a/2020-09-22-nonsense-34/index.html
+++ b/2020-09-22-nonsense-34/index.html
@@ -84,7 +84,7 @@
 <li>任晓雯. <strong>朱三小姐的一生</strong>. 新经典文化，2020.</li>
 </ul>
 <p>一本任晓雯练笔的作品，有很好的文笔和很大的问题。文笔是练出来的，问题是任晓雯多写长篇，对于小说结构和布局有自己的套路，但是换作中短篇小说，结构太大，容量装不下，很多地方就一笔带过了，偶尔的带过是点睛之笔，但这本书里有太多明显是为了保持结构的删减，就使得阅读过程中我经常跳脱出来，想想如果换作长篇，她会在这里怎么写。</p>
-<p>不过文笔确实是好，而且她似乎有种力量，想把一些东西写出来，不仅仅是小说，是希望承载一份历史的厚重。总之，依然是当代作家里，我非常喜欢的一位。</p>
+<p>不过文笔确实是好，而且她似乎有种力量，想把一些东西写出来，不仅仅是小说，而是希望承载一份历史的厚重。总之，依然是当代作家里，我非常喜欢的一位。</p>
 <ul>
 <li>淡豹. <strong>美满</strong>. 上海人民出版社, 2020.</li>
 </ul>
