--- a/photos/index.html
+++ b/photos/index.html
@@ -73,6 +73,11 @@
   </figure>
   
   <figure>
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%8d%81%e4%b8%80%e5%9c%a8%e7%a5%9e%e5%a0%82%e5%b3%aa.jpeg" alt="十一在神堂峪.jpeg" />
+    <figcaption>十一在神堂峪</figcaption>
+  </figure>
+  
+  <figure>
     <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f-%e8%99%9a%e7%84%a6.jpeg" alt="嘟嘟-虚焦.jpeg" />
     <figcaption>嘟嘟-虚焦</figcaption>
   </figure>
@@ -85,6 +90,11 @@
   <figure>
     <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f%e5%92%8c%e5%a6%88%e5%a6%88-%e8%93%9d%e8%89%b2%e6%b8%af%e6%b9%be.jpeg" alt="嘟嘟和妈妈-蓝色港湾.jpeg" />
     <figcaption>嘟嘟和妈妈-蓝色港湾</figcaption>
+  </figure>
+  
+  <figure>
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f%e5%9c%a8%e5%ae%93%e5%9b%ad.jpeg" alt="嘟嘟在宓园.jpeg" />
+    <figcaption>嘟嘟在宓园</figcaption>
   </figure>
   
   <figure>
