--- a/2020-10-10-wu-tiao-ren/index.html
+++ b/2020-10-10-wu-tiao-ren/index.html
@@ -85,9 +85,9 @@
 <blockquote>
 <p>要知道我是风的儿子，死于高贵的忧郁。</p>
 </blockquote>
-<p>参考资料：
-叶三. <a href="https://book.douban.com/subject/27129928/">我们唱</a>. 理想国丨台海出版社, 2017.
-<a href="https://theinitium.com/article/20201005-opinion-big-band-the-summer/">孫小椒：樂隊的夏末——京圈搖滾，與被流俗理解的五條人. </a></p>
+<p>参考资料：</p>
+<p>叶三. <a href="https://book.douban.com/subject/27129928/">我们唱</a>. 理想国丨台海出版社, 2017.</p>
+<p><a href="https://theinitium.com/article/20201005-opinion-big-band-the-summer/">孫小椒：樂隊的夏末——京圈搖滾，與被流俗理解的五條人. </a></p>
 
     
   </div>
