--- a/2020-07-20-bobdylan-arough-and-rowdy-ways/index.html
+++ b/2020-07-20-bobdylan-arough-and-rowdy-ways/index.html
@@ -97,7 +97,7 @@
                 document.body.appendChild(script);
             };
             getScript({
-                src: 'https://cdn.jsdelivr.net/npm/valine@1.3.10/dist/Valine.Pure.min.js',
+                src: 'https://cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.min.js',
                 onload: () => {
                     newValine();
                 }
