--- a/2020-04-02-write-write/index.html
+++ b/2020-04-02-write-write/index.html
@@ -116,7 +116,7 @@
                 document.body.appendChild(script);
             };
             getScript({
-                src: 'https://cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.min.js',
+                src: 'https://cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.Pure.min.js',
                 onload: () => {
                     newValine();
                 }
