--- a/2020-10-12-pbs-nova-human-nature/index.html
+++ b/2020-10-12-pbs-nova-human-nature/index.html
@@ -133,7 +133,7 @@
                 document.body.appendChild(script);
             };
             getScript({
-                src: 'https://cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.min.js',
+                src: 'https://cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.Pure.min.js',
                 onload: () => {
                     newValine();
                 }
