--- a/my-digital-life-1/index.html
+++ b/my-digital-life-1/index.html
@@ -109,7 +109,7 @@
                 document.body.appendChild(script);
             };
             getScript({
-                src: 'https://cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.min.js',
+                src: 'https://cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.Pure.min.js',
                 onload: () => {
                     newValine();
                 }
