--- a/books/index.html
+++ b/books/index.html
@@ -79,9 +79,9 @@
 
 
 
-<link rel="stylesheet" href="https://elizen.me/Bmdb.min.css">
+<link rel="stylesheet" href="/Bmdb.min.css">
 <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js'></script>
-<script type="text/javascript" src='https://elizen.me/Bmdb.min.js'></script>
+<script type="text/javascript" src='/Bmdb.min.js'></script>
 <script type="text/javascript">
     new Bmdb({
       type: 'books',
