--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
       </header>
 
 
+<p>一个人应该能够给孩子换尿布、计划一次侵略行动、杀猪、驾驶飞船、设计建筑物、写诗、做会计账目、砌墙、接合断骨、照顾临终的人、执行命令、下达命令、与人合作、独立行动、解方程式、分析一个新问题、施肥、编程、做一餐美味的饭、高效地战斗、勇敢地死去。专业化是为昆虫准备的。</p>
+<p>——罗伯特·海因莱恩</p>
 
 
 
