--- a/404.html
+++ b/404.html
@@ -203,6 +203,9 @@
   
 
   
+  <hr>
+  <div class="copyright">© <a href="https://elizen.me">Elizen</a> 2015 - 2020</div>
+  
   </footer>
   </article>
   
