--- a/photos/index.html
+++ b/photos/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>我的相册 - 假装斯文</title>
-    <meta property="og:title" content="我的相册 - 假装斯文">
+    <title>我的相册 - Elizen</title>
+    <meta property="og:title" content="我的相册 - Elizen">
     
     <meta name="twitter:card" content="summary">
     <meta name="referrer" content="never" />
@@ -40,7 +40,7 @@
   
   <body class="photos">
     <header class="masthead">
-      <h1><a href="/">假装斯文</a></h1>
+      <h1><a href="/">Elizen</a></h1>
 
 <p class="tagline">There is only one thing in the world worse than being talked about, and that is not being talked about.</p>
 
@@ -250,7 +250,7 @@
 
   
   <hr>
-  <div class="copyright">© <a href="https://elizen.me">Elizen</a> 2015 - 2020</div>
+  <div class="copyright">© <a href="https://elizen.me">Elizen</a> | @2015 - 2020</div>
   
   </footer>
   </article>
