--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
   
   <li><a href="https://elizen.me/books/">Books</a></li>
   
-  <li><a href="https://elizen.me//chaos/">Chaos</a></li>
+  <li><a href="https://elizen.me/chaos/">Chaos</a></li>
   
   <li><a href="https://elizen.me/movies/">Movies</a></li>
   
