--- a/photos/index.html
+++ b/photos/index.html
@@ -59,13 +59,13 @@
   
   <li><a href="https://elizen.me/books/">Books</a></li>
   
-  <li><a href="https://elizen.me/chaos/">Chaos</a></li>
+  <li><a href="https://elizen.me/tags/chaos/">Chaos</a></li>
   
   <li><a href="https://elizen.me/movies/">Movies</a></li>
   
   <li><a href="https://elizen.me/newsletter/">NewsLetter</a></li>
   
-  <li><a href="https://elizen.me/photo/">Photos</a></li>
+  <li><a href="https://elizen.me/photos/">Photos</a></li>
   
   <li><a href="https://elizen.me/posts/">Posts</a></li>
   
@@ -101,6 +101,11 @@
   <figure>
     <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%8d%81%e4%b8%80%e5%9c%a8%e7%a5%9e%e5%a0%82%e5%b3%aa.jpeg" alt="十一在神堂峪.jpeg" />
     <figcaption>十一在神堂峪</figcaption>
+  </figure>
+  
+  <figure>
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f-%e6%b8%85%e6%98%8e%e5%a4%a9%e6%b4%a5%e8%b5%b0%e4%b8%80%e8%b5%b0.JPG" alt="嘟嘟-清明天津走一走.JPG" />
+    <figcaption>嘟嘟-清明天津走一走</figcaption>
   </figure>
   
   <figure>
