--- a/chaos/harmonyos/index.html
+++ b/chaos/harmonyos/index.html
@@ -96,7 +96,7 @@
 
 
 
-<p>华为昨天发布的鸿蒙 OS 非常牛，非常棒，非常好，重要的是，非常对。</p>
+<p>华为昨天发布的<a href="https://www.harmonyos.com/cn/home/">鸿蒙 OS</a> 非常牛，非常棒，非常好，重要的是，非常对。</p>
 <p>我一直有个业内偏见，家居里的互联，所谓智能家居，智慧家庭，都是伪命题，伪需求。你家的冰箱和你家的洗衣机有什么可互联互通的。但是手机、电脑、电视、手表、音箱、车，VR/AR，这些就不一样了。它们可以和一切互联，互联一切。路上的红绿灯、广告牌、随处可见的显示屏，随处都看不见的传感器。</p>
 <p>最后，这些东西就会变成你的娱乐管家，管理你的阅读、新闻、影音；你的健康管家，管理你的身体状况；直到成为你的家庭管家，管理你的社交、计划、旅行，每日生活。</p>
 <p>但是，这些东西，苹果也在做，而且苹果的打法一向是深挖洞，广积粮，缓称王。技术储备非常深。更重要的是，库克之所以接班，很大的一个原因是他在苹果做的供应链管理非常厉害。</p>
