--- a/caipu/index.html
+++ b/caipu/index.html
@@ -100,7 +100,7 @@
 
 
 <style type="text/css">
-    #TableOfContents {;padding: .5em}
+    #TableOfContents {padding: .5em}
     #TableOfContents ~ h1 {margin:1em 0;text-align: center;}
     #TableOfContents,#TableOfContents~p:first-of-type{counter-reset:circled-numbers}
     #TableOfContents>ul>li>ul>li{display:inline-block}
@@ -887,10 +887,6 @@ Cheese）一小盒（250
 
 <script>
   !function(){const e=document.getElementById("TableOfContents");if(!e)return;e.querySelectorAll('a[href^="#"]').forEach((e=>{let t=e.getAttribute("href").replace(/^#/,"");const n=document.getElementById(t);if(t=t.replace(/https?.*$/,""),n&&(n.id=t),e.href="#"+t,""!==e.innerHTML)return;const r=e.nextElementSibling;r&&"A"===r.tagName&&(e.innerHTML=r.innerHTML,r.remove())}));let t,n=e.querySelector("ul");1===n.childElementCount&&(t=n.firstElementChild,"LI"===t.tagName&&(n.outerHTML=t.innerHTML))}();
-  </script>
-
-<script>
-  !function(){for(var t=document.getElementsByTagName("a"),e=0;e<t.length;e++)/^(https?:)?\/\
   </script>
 
 <script>
