--- a/caipu/index.html
+++ b/caipu/index.html
@@ -110,10 +110,10 @@
 
 <nav id="TableOfContents">
   <ul>
-    <li><a href="#b">B</a>
+    <li><a href="#b">B</a></li>
+    <li><a href="#八宝饭">八宝饭</a></li>
+    <li><a href="#白斩鸡httpswwwxiachufangcomrecipe101890781"><a href="https://www.xiachufang.com/recipe/101890781/">白斩鸡</a></a>
       <ul>
-        <li><a href="#八宝饭">八宝饭</a></li>
-        <li><a href="#白斩鸡httpswwwxiachufangcomrecipe101890781"><a href="https://www.xiachufang.com/recipe/101890781/">白斩鸡</a></a></li>
         <li><a href="#包菜httpswwwxiachufangcomrecipe104367657"><a href="https://www.xiachufang.com/recipe/104367657/">包菜</a></a></li>
         <li><a href="#包菜粉丝httpswwwxiachufangcomrecipe103838014"><a href="https://www.xiachufang.com/recipe/103838014/">包菜粉丝</a></a></li>
         <li><a href="#冰激凌httpswwwxiachufangcomrecipe103751342"><a href="https://www.xiachufang.com/recipe/103751342/">冰激凌</a></a></li>
@@ -379,7 +379,7 @@
 
 <p>收集一些简化版的菜谱在此，主要是为了方便自己看各种原料的用量及基本步骤，具体做法参见菜名上的链接，我并不严格按菜谱行事。按拼音排序。</p>
 <h1 id="b">B</h1>
-<h2 id="八宝饭">八宝饭</h2>
+<h1 id="八宝饭">八宝饭</h1>
 <p>糯米、红豆、花生、银耳、莲子、桂圆、枸杞。该泡的材料提前泡一夜。</p>
 <ul>
 <li>
@@ -389,7 +389,7 @@
 <p>咸版：腊肉、香肠、虾仁、香菇加油、酱油和糖炒熟；和其它材料一起拌入糯米里蒸熟或煮熟。</p>
 </li>
 </ul>
-<h2 id="白斩鸡httpswwwxiachufangcomrecipe101890781"><a href="https://www.xiachufang.com/recipe/101890781/">白斩鸡</a></h2>
+<h1 id="白斩鸡httpswwwxiachufangcomrecipe101890781"><a href="https://www.xiachufang.com/recipe/101890781/">白斩鸡</a></h1>
 <p>跟口水鸡差不多。中火煮鸡，七八分钟煮到大概熟就好（葱姜料酒放不放我觉得关系不大），焖半小时。捞出来泡冷水，剁成段。酱料：两勺鸡汤、两勺生抽、一勺老抽、少量白糖、麻油，视口味加葱姜末、蒜泥、辣椒油。</p>
 <h2 id="包菜httpswwwxiachufangcomrecipe104367657"><a href="https://www.xiachufang.com/recipe/104367657/">包菜</a></h2>
 <p>生抽、蚝油、醋、糖调料汁。辣椒、花椒、蒜末爆香，炒包菜，倒料汁。</p>
