--- a/caipu/index.html
+++ b/caipu/index.html
@@ -112,7 +112,7 @@
   <ul>
     <li><a href="#b">B</a>
       <ul>
-        <li><a href="#八宝饭">八宝饭</a></li>
+        <li><a href="#ba-bao-fan">Ba-Bao-Fan</a></li>
         <li><a href="#白斩鸡httpswwwxiachufangcomrecipe101890781"><a href="https://www.xiachufang.com/recipe/101890781/">白斩鸡</a></a></li>
         <li><a href="#包菜httpswwwxiachufangcomrecipe104367657"><a href="https://www.xiachufang.com/recipe/104367657/">包菜</a></a></li>
         <li><a href="#包菜粉丝httpswwwxiachufangcomrecipe103838014"><a href="https://www.xiachufang.com/recipe/103838014/">包菜粉丝</a></a></li>
@@ -379,7 +379,7 @@
 
 <p>收集一些简化版的菜谱在此，主要是为了方便自己看各种原料的用量及基本步骤，具体做法参见菜名上的链接，我并不严格按菜谱行事。按拼音排序。</p>
 <h1 id="b">B</h1>
-<h2 id="八宝饭">八宝饭</h2>
+<h2 id="ba-bao-fan">Ba-Bao-Fan</h2>
 <p>糯米、红豆、花生、银耳、莲子、桂圆、枸杞。该泡的材料提前泡一夜。</p>
 <ul>
 <li>
