--- a/bb/index.html
+++ b/bb/index.html
@@ -94,7 +94,7 @@
     domId: '',
   }
 </script>
-<script src="/js/bb.js"></script>
+<script src="https://immmmm.com/bb-lmm-mk.js"></script>
 <script src="https://fastly.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/ViewImage/view-image.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/Lately/lately.min.js"></script>
