--- a/movies/index.html
+++ b/movies/index.html
@@ -19407,7 +19407,7 @@
         class="sc-gKAaRy dfdORB" 
         data-year="2018-03-08 13:00:37" 
         data-star="5"
-        data-rating="8"
+        data-rating="8.1"
         data-genres="纪录片,真人秀"  
       >
         <a rel="link" href="https://movie.douban.com/subject/26717969/" target="_blank">
@@ -19440,13 +19440,13 @@
                 <path fill="currentColor" d="M12 18.26l-7.053 3.948 1.575-7.928L.587 8.792l8.027-.952L12 .5l3.386 7.34 8.027.952-5.935 5.488 1.575 7.928z"></path>
               </svg>
               
-              <svg viewBox="0 0 24 24" width="24" height="24" class="sc-dlnjwi gaztka">
+              <svg viewBox="0 0 24 24" width="24" height="24" class="sc-dlnjwi lhtmRw">
                 <path fill="none" d="M0 0h24v24H0z"></path>
                 <path fill="currentColor" d="M12 18.26l-7.053 3.948 1.575-7.928L.587 8.792l8.027-.952L12 .5l3.386 7.34 8.027.952-5.935 5.488 1.575 7.928z"></path>
               </svg>
               
             </span>
-            <span class="sc-pNWdM iibjPt">8</span>
+            <span class="sc-pNWdM iibjPt">8.1</span>
           </div>
         </a>
       </div>
