--- a/movies/index.html
+++ b/movies/index.html
@@ -15861,7 +15861,7 @@
         class="sc-gKAaRy dfdORB" 
         data-year="2018-12-07 12:47:38" 
         data-star="3"
-        data-rating="8"
+        data-rating="8.1"
         data-genres="剧情,惊悚,历史"  
       >
         <a rel="link" href="https://movie.douban.com/subject/26357945/" target="_blank">
@@ -15894,13 +15894,13 @@
                 <path fill="currentColor" d="M12 18.26l-7.053 3.948 1.575-7.928L.587 8.792l8.027-.952L12 .5l3.386 7.34 8.027.952-5.935 5.488 1.575 7.928z"></path>
               </svg>
               
-              <svg viewBox="0 0 24 24" width="24" height="24" class="sc-dlnjwi gaztka">
+              <svg viewBox="0 0 24 24" width="24" height="24" class="sc-dlnjwi lhtmRw">
                 <path fill="none" d="M0 0h24v24H0z"></path>
                 <path fill="currentColor" d="M12 18.26l-7.053 3.948 1.575-7.928L.587 8.792l8.027-.952L12 .5l3.386 7.34 8.027.952-5.935 5.488 1.575 7.928z"></path>
               </svg>
               
             </span>
-            <span class="sc-pNWdM iibjPt">8</span>
+            <span class="sc-pNWdM iibjPt">8.1</span>
           </div>
         </a>
       </div>
@@ -28260,7 +28260,7 @@
       <div 
         class="sc-gKAaRy dfdORB" 
         data-year="2016-02-05 19:33:55" 
-        data-star="3"
+        data-star="4"
         data-rating="7.8"
         data-genres="喜剧,动作,动画"  
       >
