--- a/photos/index.html
+++ b/photos/index.html
@@ -107,6 +107,11 @@
   </figure>
   
   <figure>
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%8e%bb%e4%ba%86%e6%97%a0%e6%95%b0%e6%ac%a1%e7%9a%84%e5%9c%a3%e9%9c%b2%e5%ba%84%e5%9b%ad.jpg" alt="去了无数次的圣露庄园.jpg" />
+    <figcaption>去了无数次的圣露庄园</figcaption>
+  </figure>
+  
+  <figure>
     <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/%e5%98%9f%e5%98%9f-%e6%b8%85%e6%98%8e%e5%a4%a9%e6%b4%a5%e8%b5%b0%e4%b8%80%e8%b5%b0.JPG" alt="嘟嘟-清明天津走一走.JPG" />
     <figcaption>嘟嘟-清明天津走一走</figcaption>
   </figure>
