--- a/content/journal/2023-09.html
+++ b/content/journal/2023-09.html
@@ -42,6 +42,8 @@
 <p>中午一起吃羊蝎子，过了把嘴瘾，回看九月份，大部分的工作有了一个转折的拐点，当然，也有一些新的挑战，变被动为主动，可能是最好的办法。希望十月能够百尺竿头，更进一步。</p>
 </blockquote>
 
+<p><a href="https://elizen.me">Back Home</a></p>
+
 </body>
 </html>
 
