--- a/bb/index.html
+++ b/bb/index.html
@@ -102,11 +102,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aplayer/1.10.1/APlayer.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/meting/2.0.1/Meting.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lozad.js/1.16.0/lozad.min.js"></script>
-<script src="https://immmmm.com/memos/memos.js"></script>
+<script src="https://memobbs.app/memos.js"></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aplayer/1.10.1/APlayer.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/artalk/2.7.3/ArtalkLite.css" rel="stylesheet">
 <link rel="stylesheet" href="https://immmmm.com/memos/grid.css">
-<link rel="stylesheet" href="https://immmmm.com/memos/memos.css?v=20240116">
+<link rel="stylesheet" href="https://memobbs.app/memos.css">
 
