update kids and now page 69beb15168c1d87881e94e0f625ae08f7ce14452

--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
 ——<em>罗伯特·海因莱恩</em></p>
 </blockquote>
 <p>更多文章请访问 <a href="/tags/">Tags</a> 或者 <a href="/bb/">Memos</a>。</p>
+<h2 id="now">Now</h2>
+<p>本来单独见了一个 Now 页面，来介绍自己最近在干嘛，给一些偶尔闲逛过来的老友一个说辞，但想想觉得多此一举，索性写在这里，不仅是对自己虚度的时光找来借口，也算是门前挂好的一副对联。</p>
+<blockquote>
+<p>学英语，准备试试雅思考试。</p>
+<p>看王小波，已经读到第四本《黑铁时代》。</p>
+<p>好奇心转移到了欧洲，想看看文明的起源究竟长个什么样子。</p>
+<p>研究与大模型有关的一切，但不是研究一切大模型。</p>
+</blockquote>
 <h2 id="近期阅读">近期阅读</h2>
 
 
