update BB 2298fcebb1760a00de429db182602a0d9994d3b1

--- a/bb/index.html
+++ b/bb/index.html
@@ -107,6 +107,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aplayer/1.10.1/APlayer.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/artalk/2.7.3/ArtalkLite.css" rel="stylesheet">
-<link rel="stylesheet" href="https://immmmm.com/memos/grid.css">
+<link rel="stylesheet" href="https://memobbs.app/grid.css">
 <link rel="stylesheet" href="https://memobbs.app/memos.css">
 
