--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 
 
+<div class="main archive">
 <ul>
   
   <li>
@@ -1022,6 +1023,7 @@ document.addEventListener('DOMContentLoaded', function() {
   </li>
   
 </ul>
+</div>
 
   <footer>
   
