Update main.yml d59d468183b469e747077251889a8574b282a4cf

--- a/now/index.html
+++ b/now/index.html
@@ -31,13 +31,13 @@
     
       
       <meta property="description" content="心有猛虎，细嗅蔷薇。
-[&hellip;] 2024 年记：
+[&amp;hellip;] 2024 年记：
 进来在读王小波，读欧洲史，希望今年能看完老友记和宋飞正传。
 认真准备落户资料，仔仔细细看房，买房，卖房，等着小娃娃步入少年学堂。
 开始在人工智能领域里摸索，希望做出点成绩，也一定要做出点成绩。
 ">
       <meta property="og:description" content="心有猛虎，细嗅蔷薇。
-[&hellip;] 2024 年记：
+[&amp;hellip;] 2024 年记：
 进来在读王小波，读欧洲史，希望今年能看完老友记和宋飞正传。
 认真准备落户资料，仔仔细细看房，买房，卖房，等着小娃娃步入少年学堂。
 开始在人工智能领域里摸索，希望做出点成绩，也一定要做出点成绩。
